src/log/build_2024-05-29_16-42-10/blackjack/stderr.log
  File "/home/mustache/ros2_ws/src/install/blackjack/lib/python3.10/site-packages/blackjack/motor_control.py", line 53
    if location >= current_location AND (location-current_location) < 100:
                                    ^^^
SyntaxError: invalid syntax

